# esp-embassy-config

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
examples/: config_uart.rs  config_wifi.rs
src/: configs.rs  key.rs  lib.rs  menu.rs
