[package]
name = "esp-embassy-config"
version = "0.1.0"
edition = "2024"

[dependencies]
log = { version = "0.4.21" }

# dependencies for ESP
esp-backtrace = { version = "0.15.0", features = [
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = "0.23.1"
esp-hal-embassy = "0.6.0"
esp-println = { version = "0.13.1", default-features = false, features = [
    "log",
] }
esp-storage = "0.5.0"

# dependencies for embassy
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embassy-executor = { version = "0.7.0", features = [
    "task-arena-size-32768",
    "executor-thread",
    "log",
] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
embassy-sync = "0.6.1"
embassy-futures = "0.1.1"
heapless = "0.8.0"
static_cell = { version = "2.0", features = ["nightly"] }

embassy-embedded-hal = "0.3.0"
embedded-hal = "1.0.0"
embedded-storage = "0.3.1"

[features]
esp32 = ["esp-hal/esp32", "esp-hal-embassy/esp32", "esp-storage/esp32"]
esp32c2 = ["esp-hal/esp32c2", "esp-hal-embassy/esp32c2", "esp-storage/esp32c2"]
esp32c3 = ["esp-hal/esp32c3", "esp-hal-embassy/esp32c3", "esp-storage/esp32c3"]
esp32c6 = ["esp-hal/esp32c6", "esp-hal-embassy/esp32c6", "esp-storage/esp32c6"]
esp32h2 = ["esp-hal/esp32h2", "esp-hal-embassy/esp32h2", "esp-storage/esp32h2"]
esp32s2 = ["esp-hal/esp32s2", "esp-hal-embassy/esp32s2", "esp-storage/esp32s2"]
esp32s3 = ["esp-hal/esp32s3", "esp-hal-embassy/esp32s3", "esp-storage/esp32s3"]

esp32example = [
    "esp32",
    "esp-backtrace/esp32",
    "esp-println/esp32",
    "esp-println/uart",
]
esp32c2example = [
    "esp32c2",
    "esp-backtrace/esp32c2",
    "esp-println/esp32c2",
    "esp-println/uart",
]
esp32c3example = [
    "esp32c3",
    "esp-backtrace/esp32c3",
    "esp-println/esp32c3",
    "esp-println/uart",
]
esp32c6example = [
    "esp32c6",
    "esp-backtrace/esp32c6",
    "esp-println/esp32c6",
    "esp-println/jtag-serial",
]
esp32h2example = [
    "esp32h2",
    "esp-backtrace/esp32h2",
    "esp-println/esp32h2",
    "esp-println/jtag-serial",
]
esp32s2example = [
    "esp32s2",
    "esp-backtrace/esp32s2",
    "esp-println/esp32s2",
    "esp-println/uart",
]
esp32s3example = [
    "esp32s3",
    "esp-backtrace/esp32s3",
    "esp-println/esp32s3",
    "esp-println/jtag-serial",
]

[[example]]
name = "config_uart"

[profile.dev.package.esp-storage]
opt-level = 3
